hphp/hack/test/typecheck/inout/bad_inout_hint_return4.php
<?hh // strict

function foo(): (function(inout int): int) {
  return function(int $x) {
    return 42;
  };
}
